--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,22 +6,18 @@ name: ci
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        node: [10, 12, 14, 15]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 12
       - run: node --version
       - run: npm ci
       - run: npm test
       - name: coverage
         uses: codecov/codecov-action@v1
         with:
-          name: actions ${{ matrix.node }}
+          name: actions 12
   lint:
     runs-on: ubuntu-latest
     steps:
