--- a/three-fps/package.json
+++ b/three-fps/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "eslint-plugin-jest": "^25.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
