--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ $default-branch, release ]
   pull_request:
 name: ci
 jobs:
@@ -12,7 +12,6 @@ jobs:
         with:
           node-version: 12
       - run: |
-          cd three-fps
           npm ci
           npm run lint
 
@@ -24,6 +23,5 @@ jobs:
         with:
           node-version: 12
       - run: |
-          cd three-fps
           npm ci
           npm run test
